[OCEPROJECT-3085, OCEPROJECT-2205] Section nav fixes. 1) Fixed/added styling for level 3 and 4 (counting from below the root) on both mobile and desktop. 2) Fixed styling for current-page plus/minus button on mobile.

--- a/CancerGov/_src/StyleSheets/mediaqueries/large-up.scss
+++ b/CancerGov/_src/StyleSheets/mediaqueries/large-up.scss
@@ -135,6 +135,16 @@
 	.section-nav .level-2 > ul {
 		margin-left: 0.875em;
 	}
+
+	/* level 3 */
+	.section-nav .level-3 > ul {
+		margin-left: 0.875em;
+	}
+
+	/* level 4 */
+	.section-nav .level-4 > ul {
+		margin-left: 0.875em;
+	}
 	/** END level-by-level styling **/
 
 	/* this rule to be below the level-by-level styles */
